--- a/index.html
+++ b/index.html
@@ -227,43 +227,37 @@
                   <div class="number-box">
                     <span class="number-box__number">1</span>
                   </div>
-                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и
-                    зубонарезном оборудовании</p>
+                  <p class="infoblock__desc">Лазерная резка цветных металлов, нержавеющая сталь, аллюминий, латунь, дюраль</p>
                 </div>
                 <div class="infoblock">
                   <div class="number-box">
                     <span class="number-box__number">2</span>
                   </div>
-                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и
-                    зубонарезном оборудовании</p>
+                  <p class="infoblock__desc">Резка листового проката: черная сталь до 40мм и цветного проката до 30мм</p>
                 </div>
                 <div class="infoblock">
                   <div class="number-box">
                     <span class="number-box__number">3</span>
                   </div>
-                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и
-                    зубонарезном оборудовании</p>
+                  <p class="infoblock__desc">Резка металла различными типами газов: Кислород, Азот, Воздух. Наши специалисты выберут оптимальный вариант для резки с максимальным качеством реза</p>
                 </div>
                 <div class="infoblock">
                   <div class="number-box">
                     <span class="number-box__number">4</span>
                   </div>
-                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и
-                    зубонарезном оборудовании</p>
+                  <p class="infoblock__desc">Резка любого проката до 6 метров: Круглая труба &#8960;30-350мм, профильная труба &#8960;30-240мм, швеллер, уголок.</p>
                 </div>
                 <div class="infoblock">
                   <div class="number-box">
                     <span class="number-box__number">5</span>
                   </div>
-                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и
-                    зубонарезном оборудовании</p>
+                  <p class="infoblock__desc">Резка профильного проката под углом до 45 градусов, что позволяет экономить время на дополнительных мех. операциях, таких как: снятие фаски под сварной шов, отверстие под потайную головку винта и пр.</p>
                 </div>
                 <div class="infoblock">
                   <div class="number-box">
                     <span class="number-box__number">6</span>
                   </div>
-                  <p class="infoblock__desc">Обработка деталей на токарном, фрезерном, шлифовальном, расточном и
-                    зубонарезном оборудовании</p>
+                  <p class="infoblock__desc">Рабочий стол лазерного оборудования размером 6000мм*2000мм позволяет изготавливать крупногабаритные деталию. А так же делать более выгодный раскрой изделий</p>
                 </div>
               </div>
             </div>
