--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                   <div class="number-box">
                     <span class="number-box__number">1</span>
                   </div>
-                  <p class="infoblock__desc">Лазерная резка цветных металлов, нержавеющая сталь, аллюминий, латунь, дюраль</p>
+                  <p class="infoblock__desc">Лазерная резка цветных металлов: нержавеющая сталь, аллюминий, латунь, дюраль, оцинкованный лист</p>
                 </div>
                 <div class="infoblock">
                   <div class="number-box">
@@ -257,7 +257,7 @@
                   <div class="number-box">
                     <span class="number-box__number">6</span>
                   </div>
-                  <p class="infoblock__desc">Рабочий стол лазерного оборудования размером 6000мм*2000мм позволяет изготавливать крупногабаритные деталию. А так же делать более выгодный раскрой изделий</p>
+                  <p class="infoblock__desc">Рабочий стол лазерного оборудования размером 6000мм*2000мм позволяет изготавливать крупногабаритные детали. А так же делать более выгодный раскрой изделий</p>
                 </div>
               </div>
             </div>
