--- a/index.html
+++ b/index.html
@@ -23,25 +23,39 @@
   <header class="header">
     <div class="wrapper">
       <a href="#" class="logo" id="logo">
-        <img src="./assets/images/logo1.png" alt="logo" class="logo__img">
+        <!-- <img src="./assets/images/logo1.png" alt="logo" class="logo__img"> -->
+        <img src="./assets/images/laser-logo.png" alt="logo" class="logo__img">
       </a>
       <nav class="nav">
         <ul class="list">
           <li class="list__item"><a href="#services" class="list__link">Услуги</a></li>
           <li class="list__item"><a href="#production" class="list__link">О производстве</a></li>
           <li class="list__item"><a href="#contacts" class="list__link">Контакты</a></li>
+          <li class="list__item list__contacts">
+            <div class="contacts__wrap">
+              <a href="tel:#" class="contacts__link contacts__link--tel">8 999 XXX XX XX</a>
+              <a href="tel:#" class="contacts__link contacts__link--tel">8 800 XXX XX XX</a>
+              <a href="mailto:#" class="contacts__link contacts__link--mail">email@email.ru</a>
+            </div>
+            <div class="contacts__icons icons">
+              <a href="#" class="icons__link"><img class="icons__img" src="./assets/images/icons/telegram-svg.svg"
+                  alt="telegram"></a>
+              <a href="https://wa.me/#" target="_blank" class="icons__link"><img class="icons__img"
+                  src="./assets/images/icons/whatsapp-svg.svg" alt="whatsapp"></a>
+            </div>
+          </li>
         </ul>
       </nav>
       <div class="contacts">
         <div class="contacts__icons icons">
-          <!-- <a href="#" class="icons__link"><img class="icons__img" src="./assets/images/icons/telegram.png"
-              alt="telegram"></a> -->
-          <a href="https://wa.me/+79511926176" target="_blank" class="icons__link"><img class="icons__img" src="./assets/images/icons/whatsapp.png"
-              alt="whatsapp"></a>
+          <a href="#" class="icons__link"><img class="icons__img" src="./assets/images/icons/telegram-svg.svg"
+              alt="telegram"></a>
+          <a href="https://wa.me/#" target="_blank" class="icons__link"><img class="icons__img"
+              src="./assets/images/icons/whatsapp-svg.svg" alt="whatsapp"></a>
         </div>
         <div class="contacts__wrap">
-          <a href="tel:+79512084892" class="contacts__link contacts__link--tel">8 951 208 48 92</a>
-          <a href="mailto:amada18@mail.ru" class="contacts__link contacts__link--mail">amada18@mail.ru</a>
+          <a href="tel:#" class="contacts__link contacts__link--tel">8 999 XXX XX XX</a>
+          <a href="mailto:#" class="contacts__link contacts__link--mail">email@email.ru</a>
         </div>
       </div>
       <div class="burger">
@@ -58,7 +72,7 @@
       <img class="primary__img" src="./assets/images/laser-working-of-metal-tem.jpg" alt="лазерная резка фон">
       <div class="wrapper">
         <div class="content">
-          <h1 class="content__title">Лазерная резка металла в Ижевске</h1>
+          <h1 class="content__title">Лазерная резка металла в Вашем городе</h1>
           <p class="content__subtitle">Профессиональная обработка металла с безупречным качеством и точностью. Мы
             предлагаем передовое оборудование и опытных специалистов для создания идеальных контуров и деталей вашего
             проекта.</p>
@@ -227,37 +241,44 @@
                   <div class="number-box">
                     <span class="number-box__number">1</span>
                   </div>
-                  <p class="infoblock__desc">Лазерная резка цветных металлов: нержавеющая сталь, аллюминий, латунь, дюраль, оцинкованный лист</p>
+                  <p class="infoblock__desc">Лазерная резка цветных металлов: нержавеющая сталь, аллюминий, латунь,
+                    дюраль, оцинкованный лист</p>
                 </div>
                 <div class="infoblock">
                   <div class="number-box">
                     <span class="number-box__number">2</span>
                   </div>
-                  <p class="infoblock__desc">Резка листового проката: черная сталь до 40мм и цветного проката до 30мм</p>
+                  <p class="infoblock__desc">Резка листового проката: черная сталь до 40мм и цветного проката до 30мм
+                  </p>
                 </div>
                 <div class="infoblock">
                   <div class="number-box">
                     <span class="number-box__number">3</span>
                   </div>
-                  <p class="infoblock__desc">Резка металла различными типами газов: Кислород, Азот, Воздух. Наши специалисты выберут оптимальный вариант для резки с максимальным качеством реза</p>
+                  <p class="infoblock__desc">Резка металла различными типами газов: Кислород, Азот, Воздух. Наши
+                    специалисты выберут оптимальный вариант для резки с максимальным качеством реза</p>
                 </div>
                 <div class="infoblock">
                   <div class="number-box">
                     <span class="number-box__number">4</span>
                   </div>
-                  <p class="infoblock__desc">Резка любого проката до 6 метров: Круглая труба &#8960;30-350мм, профильная труба &#8960;30-240мм, швеллер, уголок.</p>
+                  <p class="infoblock__desc">Резка любого проката до 6 метров: Круглая труба &#8960;30-350мм, профильная
+                    труба &#8960;30-240мм, швеллер, уголок.</p>
                 </div>
                 <div class="infoblock">
                   <div class="number-box">
                     <span class="number-box__number">5</span>
                   </div>
-                  <p class="infoblock__desc">Резка профильного проката под углом до 45 градусов, что позволяет экономить время на дополнительных мех. операциях, таких как: снятие фаски под сварной шов, отверстие под потайную головку винта и пр.</p>
+                  <p class="infoblock__desc">Резка профильного проката под углом до 45 градусов, что позволяет экономить
+                    время на дополнительных мех. операциях, таких как: снятие фаски под сварной шов, отверстие под
+                    потайную головку винта и пр.</p>
                 </div>
                 <div class="infoblock">
                   <div class="number-box">
                     <span class="number-box__number">6</span>
                   </div>
-                  <p class="infoblock__desc">Рабочий стол лазерного оборудования размером 6000мм*2000мм позволяет изготавливать крупногабаритные детали. А так же делать более выгодный раскрой изделий</p>
+                  <p class="infoblock__desc">Рабочий стол лазерного оборудования размером 6000мм*2000мм позволяет
+                    изготавливать крупногабаритные детали. А так же делать более выгодный раскрой изделий</p>
                 </div>
               </div>
             </div>
@@ -328,7 +349,7 @@
         <h2 class="contacts__title">Наши контакты</h2>
         <div class="contacts__adress-box adress-box">
           <h3 class="adress-box__title">Мы находимся</h3>
-          <p class="adress-box__desc">426032, г.Ижевск, Сарапульский тракт, 14</p>
+          <p class="adress-box__desc">426000, г.Ваш, улица Вашего производства, 7</p>
         </div>
         <div class="contacts__contact-us contact-us">
           <h3 class="contact-us__title">Связаться с нами</h3>
@@ -337,9 +358,9 @@
           </p>
           <button class="contacts__button content__button">оставить заявку</button>
           <div class="contact-us__wrap">
-            <a href="tel:+79512084892" class="contact-us__link">8 951 208 48 92</a>
-            <a href="tel:88007071120" class="contact-us__link">8 800 707 11 20</a>
-            <a href="mailto:amada18@mail.ru" class="contact-us__link">amada18@mail.ru</a>
+            <a href="tel:#" class="contact-us__link">8 999 XXX XX XX</a>
+            <a href="tel:#" class="contact-us__link">8 800 XXX XX XX</a>
+            <a href="mailto:#" class="contact-us__link">email@email.ru</a>
           </div>
         </div>
       </div>
@@ -348,7 +369,7 @@
   <footer class="footer">
     <div class="wrapper">
       <a class="footer__logo logo" href="#">
-        <img src="./assets/images/logo1.png" alt="logo" class="logo__img">
+        <img src="./assets/images/laser-logo.png" alt="logo" class="logo__img">
       </a>
       <nav class="footer__nav nav">
         <ul class="nav__list list">
@@ -359,14 +380,14 @@
       </nav>
       <div class="footer__contacts">
         <div class="contacts__icons icons">
-          <!-- <a href="#" class="icons__link"><img class="icons__img" src="./assets/images/icons/telegram.png"
-              alt="telegram"></a> -->
-          <a href="https://wa.me/+79511926176" target="_blank" class="icons__link"><img class="icons__img" src="./assets/images/icons/whatsapp.png"
-              alt="whatsapp"></a>
+          <a href="#" class="icons__link"><img class="icons__img" src="./assets/images/icons/telegram-svg.svg"
+              alt="telegram"></a>
+          <a href="https://wa.me/#" target="_blank" class="icons__link"><img class="icons__img"
+              src="./assets/images/icons/whatsapp-svg.svg" alt="whatsapp"></a>
         </div>
         <div class="contacts__wrap">
-          <a href="tel:+79512084892" class="contacts__link contacts__link--tel">8 951 208 48 92</a>
-          <a href="mailto:amada18@mail.ru" class="contacts__link contacts__link--mail">amada18@mail.ru</a>
+          <a href="tel:#" class="contacts__link contacts__link--tel">8 999 XXX XX XX</a>
+          <a href="mailto:#" class="contacts__link contacts__link--mail">email@email.ru</a>
         </div>
       </div>
     </div>
