--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap"
     rel="stylesheet">
-  <link rel="apple-touch-icon" href="./apple-touch-icon.png">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <!-- 180x180 - ставим первым для safari -->
-  <link rel="icon" href="./favicon.ico" sizes="any"><!-- 32x32 -->
-  <link rel="manifest" href="./manifest.webmanifest">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" href="/favicon.ico" sizes="any"><!-- 32x32 -->
+  <link rel="manifest" href="/manifest.webmanifest">
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   <title>Лазерная резка</title>
@@ -24,7 +26,7 @@
     <div class="wrapper">
       <a href="#" class="logo" id="logo">
         <!-- <img src="./assets/images/logo1.png" alt="logo" class="logo__img"> -->
-        <img src="./assets/images/laser-logo.png" alt="logo" class="logo__img">
+        <img src="./assets/images/laser-logo-white.png" alt="logo" class="logo__img">
       </a>
       <nav class="nav">
         <ul class="list">
@@ -369,7 +371,7 @@
   <footer class="footer">
     <div class="wrapper">
       <a class="footer__logo logo" href="#">
-        <img src="./assets/images/laser-logo.png" alt="logo" class="logo__img">
+        <img src="./assets/images/laser-logo-white.png" alt="logo" class="logo__img">
       </a>
       <nav class="footer__nav nav">
         <ul class="nav__list list">
